<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:contentDescription="@string/description_img_course_poster"
        android:src="@color/colorImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:gravity="start"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toTopOf="@+id/img_poster"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:gravity="start"
        android:textColor="@color/colorTextSecondary"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/img_poster"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/dateline" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_35"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:background="@drawable/bg_button_pressed_selector"
        android:paddingStart="@dimen/dp_4"
        android:paddingEnd="@dimen/dp_4"
        android:text="@string/start_learn"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_poster" />

    <TextView
        android:id="@+id/tv_label_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_8"
        android:text="@string/description_module"
        android:textColor="@color/colorText"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start" />

    <View
        android:id="@+id/view_line_description"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_8"
        android:background="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_description" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:textColor="@color/colorText"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_line_description"
        tools:text="@string/description" />

    <TextView
        android:id="@+id/tv_list_module"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_8"
        android:text="@string/list_module"
        android:textColor="@color/colorText"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <View
        android:id="@+id/view_line_module"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_8"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@+id/tv_list_module" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_module"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_4"
        android:nestedScrollingEnabled="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_line_module"
        tools:listitem="@layout/item_module_list" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rv_module"
        app:layout_constraintEnd_toEndOf="@+id/rv_module"
        app:layout_constraintStart_toStartOf="@+id/rv_module"
        app:layout_constraintTop_toTopOf="@+id/rv_module"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
